--- a/src/components/mission/mission.scss
+++ b/src/components/mission/mission.scss
@@ -1,19 +1,16 @@
 @import '../../styles/variables';
 
 .mission {
+    background-image: url("../../images/3-margaritas-bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat-x;
 
   &__box {
     text-align: center;
     padding: 400px 40px 0;
     max-width: 100%;
-    background-image: url("../../images/margaritas-bg.jpg");
-    background-position:center;
-    background-size: contain;
-    background-repeat: repeat;
     height: 100vh;
-    border: 2px solid $colorPrimary;
-    border: 8px;
-    box-shadow: 0 5px 5px $colorSecondary;
     color: $colorSecondary;
     font-size: 2em;
     font-family: amaranth;
@@ -28,5 +25,35 @@
     
     
   }
+}
+@media (max-width: 1290px) {
+}
+@media (max-width: 1100px) {
+  
+}
+@media (max-width: 883px) {
+  .mission{
+    &__description {
+      line-height: 1.2em;
+    }
+  }
+  
+}
+@media (max-width: 700px) {
+  .mission {
+    padding-top: 400px;
+    height: 100vh;
+  
+  &__box {
+    padding: 0;
+    font-size: 1.4em;
+    line-height: 1.2em;
+  }
 
+  &__description {
+    background-color: $colorBlue05;
+    border-radius: 8px;
+    
+  }
+}
 }
